[gd_scene load_steps=24 format=2]

[ext_resource path="res://Images/left_on.png" type="Texture" id=1]
[ext_resource path="res://Images/left_off.png" type="Texture" id=2]
[ext_resource path="res://Images/up_on.png" type="Texture" id=3]
[ext_resource path="res://Images/up_off.png" type="Texture" id=4]
[ext_resource path="res://Images/down_on.png" type="Texture" id=5]
[ext_resource path="res://Images/down_off.png" type="Texture" id=6]
[ext_resource path="res://Images/right_on.png" type="Texture" id=7]
[ext_resource path="res://Images/right_off.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Bard.gd" type="Script" id=9]
[ext_resource path="res://Images/bard.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Sheet.gd" type="Script" id=11]
[ext_resource path="res://Sound/seq_A/note1.wav" type="AudioStream" id=12]
[ext_resource path="res://Sound/seq_A/note2.wav" type="AudioStream" id=13]
[ext_resource path="res://Sound/seq_A/note3.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/seq_A/note4.wav" type="AudioStream" id=15]
[ext_resource path="res://Images/pauta.png" type="Texture" id=16]
[ext_resource path="res://Fonts/Enter the Grid.ttf" type="DynamicFontData" id=17]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 12.1011, 1.29916 )

[sub_resource type="DynamicFont" id=6]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 17 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="World" type="Node2D"]

[node name="Arrows" type="Node2D" parent="." index="0"]

position = Vector2( 415.742, 70.7339 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="left" type="AnimatedSprite" parent="Arrows" index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="up" type="AnimatedSprite" parent="Arrows" index="1"]

position = Vector2( 60, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="down" type="AnimatedSprite" parent="Arrows" index="2"]

position = Vector2( 120, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="AnimatedSprite" parent="Arrows" index="3"]

position = Vector2( 180, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Bard" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 66.2003, 465.408 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 9 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="Bard" index="0"]

scale = Vector2( 0.533577, 0.533577 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bard" index="1"]

position = Vector2( 45.8489, -96.6466 )
build_mode = 0
polygon = PoolVector2Array( -81.2949, 73.6734, -81.2949, 67.2365, -67.3482, 56.5083, -82.3677, 48.9985, -82.3677, 39.3431, -65.2026, 42.5616, -43.7462, 46.8529, -34.0908, 47.9257, -19.0712, 56.5083, -11.5615, 65.0909, -11.5615, 80.1103, -14.78, 92.9842, -19.0712, 102.64, -39.4549, 105.858, -30.8723, 115.513, -29.7994, 125.169, -10.4886, 129.46, -13.7072, 139.116, -33.0179, 139.116, -33.4412, 152.294, -67.3482, 151.989, -68.4211, 145.552, -71.6395, 144.48, -72.7123, 123.023, -58.7657, 104.785, -71.6395, 100.494, -74.858, 80.1103 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="Node" parent="." index="2"]

editor/display_folded = true

[node name="StaticBody2D" type="StaticBody2D" parent="Floor" index="0"]

position = Vector2( 511.049, 560.515 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D" index="0"]

scale = Vector2( 43.008, 29.9428 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sheet" type="StaticBody2D" parent="." index="3"]

position = Vector2( 512.995, 482.85 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="note1" type="AudioStreamPlayer2D" parent="Sheet" index="0"]

position = Vector2( -512.995, -482.85 )
stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note2" type="AudioStreamPlayer2D" parent="Sheet" index="1"]

position = Vector2( -512.995, -482.85 )
stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note3" type="AudioStreamPlayer2D" parent="Sheet" index="2"]

position = Vector2( -512.995, -482.85 )
stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note4" type="AudioStreamPlayer2D" parent="Sheet" index="3"]

position = Vector2( -512.995, -482.85 )
stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Sprite" type="Sprite" parent="Sheet" index="4"]

scale = Vector2( 0.307476, 0.307476 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sheet" index="5"]

position = Vector2( -379.147, -471.426 )
build_mode = 0
polygon = PoolVector2Array( 363.921, 484.281, 363.261, 449.942, 367.223, 448.621, 398.26, 448.621, 402.883, 455.225, 400.241, 461.828, 396.939, 466.451, 396.939, 493.526, 392.977, 497.488, 360.619, 496.828, 357.978, 490.885 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collect" type="Timer" parent="Sheet" index="6"]

process_mode = 1
wait_time = 0.6
one_shot = false
autostart = false

[node name="wrong" type="Timer" parent="Sheet" index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="select" type="Label" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -28.0
margin_top = 20.0
margin_right = 984.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "press SPACE to select"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="escape" type="Label" parent="." index="5"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -28.0
margin_top = 20.0
margin_right = 984.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "press SPACE to escape
"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[connection signal="finished" from="Sheet/note1" to="Sheet" method="_on_note1_finished"]

[connection signal="finished" from="Sheet/note2" to="Sheet" method="_on_note2_finished"]

[connection signal="finished" from="Sheet/note3" to="Sheet" method="_on_note3_finished"]

[connection signal="finished" from="Sheet/note4" to="Sheet" method="_on_note4_finished"]

[connection signal="timeout" from="Sheet/collect" to="Sheet" method="_on_collect_timeout"]

[connection signal="timeout" from="Sheet/wrong" to="Sheet" method="_on_wrong_timeout"]


